# cogno-persona

./: LOGGING.md  README.md  cognobench.py  pyproject.toml
.github/workflows/: ci.yml
cogno_persona/: __init__.py  compose.py  loader.py  selector.py  store.py  types.py
cognobench/: ROUTING_BENCH_RESULTS.md  __init__.py  routing_cases.py  runner.py  stub_embedder.py
docs/: HOST_INTEGRATION.md
examples/: host_min.py
tests/: conftest.py
tests/integration/: test_selector_live.py
tests/unit/: test_cognobench_smoke.py  test_compose.py  test_loader.py  test_selector.py  test_store.py  test_types.py
